fix opacity of img/video in dark mode (0.8 opacity, set in simple.css)

--- a/nbljaved.com/org/static/css/custom.css
+++ b/nbljaved.com/org/static/css/custom.css
@@ -17,6 +17,11 @@
     --preformatted: #444;
     --marked: #ffdd33;
     --disabled: #efefef;
+    /* Remove transparency so light media isn't so glaring in dark mode */
+    img,
+    video {
+        opacity: 1.0;
+    }
   }
 }
 
